Updated stats container issue on mobile

--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ h1:first-of-type {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
   gap: 5%;
   padding: 10px;
-  padding-bottom: 50px;
+  padding-bottom: 60px;
 }
 
 .memories-images {
@@ -395,7 +395,7 @@ h1:first-of-type {
   #introduction, #memories-container {
     margin: 20px;
     margin-top: 50px;
-    margin-bottom: 40px;
+    margin-bottom: 50px;
   }
   
   #intro-text {
